--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,10 @@ body {
     height:400px;
   }
 
-body {
-    font-family: 'Georgia', serif;
+#bootstrapoverrides {
+  font-family: 'Lato', sans-serif;
+  color:gray;
+      background-color:#E8E8E8;
     /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
 }
 
@@ -26,7 +28,7 @@ body {
     margin-top:250px;
     padding: 0 0 0px 0;
     font-size: 4.5em;
-    color:black;
+    color:#505050;
 }
 
 .text-vertical-center h2 {
@@ -97,28 +99,28 @@ transform: scale(1.3);
 
 /* social media button css */
 .social-fb, .social-tw, .social-gp, .social-em, .social-rm {
-color: black;
+color: #606060;
 padding:10px;
 
 
 }
-.social-fb:hover {
+.social-fb {
 color: #3B5998;
 }
-.social-tw:hover {
+.social-tw {
 color: #4099FF;
 
 }
-.social-gp:hover {
-color: #d34836;
+.social-gp {
+color: #1D9833;
 
 }
-.social-em:hover {
+.social-em {
 color: #f39c12;
 
 }
-.social-rm:hover {
-color: #D6BF7A;
+.social-rm {
+color: #d34836;
 }
 
 
@@ -360,7 +362,12 @@ I want to have parallax but I'll pick up with it layer
 
   -------END OF PARALLAX CSS */
 
-  .btn:focus {
-  outline: none;
-  text-decoration: initial;
+#writings {
+  margin: 100px 0 0 0;
+  background-color: pink;
+  padding: 50px;
+}
+
+.mouseenterportfolio {
+  padding: 100px;
 }
