--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,8 @@
 
 /* Global Styles */
 
-html,
 body {
     width: 100%;
-    height:400px;
   }
 
 #bootstrapoverrides {
@@ -25,15 +23,14 @@ body {
 }
 
 .text-vertical-center h1 {
-    margin-top:250px;
+    margin-top:150px;
     padding: 0 0 5px 0;
     font-size: 4.5em;
     color:#505050;
 }
 
 .text-vertical-center h2 {
-    margin-top:250px;
-    padding: 0 0 5px 0;
+    margin-top:150px;
     font-size: 3.5em;
     color:#505050;
 }
@@ -103,6 +100,7 @@ transform: scale(1.3);
 .social-fb, .social-tw, .social-gp, .social-em, .social-rm {
 color: #606060;
 padding:10px;
+z-index: 2;
 
 
 }
@@ -365,15 +363,20 @@ I want to have parallax but I'll pick up with it layer
 
   -------END OF PARALLAX CSS */
 .projectsgroup {
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 25px;
 }
 
 .projects {
   margin: 10px 0 10px 0;
-  padding: 60px;
+  padding: 40px;
   background-color: white;
 }
 
 .buttonstyle {
   background-color:red;
+}
+
+#map{
+  z-index: -1;
 }
