moved map to load first (I think), and created temp modals for About Me, Writing, Maps, and Other Projects

--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,7 @@ I want to have parallax but I'll pick up with it layer
 element style, and override the bootstrap padding css*/
 #bootstrapoverrides > div.container.projectsgroup > div > button {
   padding-left:0px;
+  padding-right:0px;
 }
 
 .buttonbackground {
