--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@
 /* Global Styles */
 
 body {
+    position: absolute;
+    height:100%;
     width: 100%;
+    margin:0px;
+    padding:0;
   }
 
 #bootstrapoverrides {
@@ -24,13 +28,13 @@ body {
 
 .text-vertical-center h1 {
     margin-top:150px;
-    padding: 0 0 5px 0;
-    font-size: 4.5em;
+    font-size: 3.5em;
     color:#505050;
 }
 
 .text-vertical-center h2 {
-    margin-top:150px;
+    margin:0px;
+    padding:0px;
     font-size: 3.5em;
     color:#505050;
 }
@@ -377,6 +381,11 @@ I want to have parallax but I'll pick up with it layer
   position: relative;
 }
 
+.projects h4 {
+  padding: 0px;
+  margin:0px;
+}
+
 /*this is the same as the .projects class, and SHOULD be in the .projects css, but for some reason the padding command does
 \ not override the bootstrap css padding command, the only way to override the command is to specifically call out the 
 element style, and override the bootstrap padding css*/
@@ -402,8 +411,21 @@ element style, and override the bootstrap padding css*/
 
 
 
-#map{
+#mapid{
+  position:fixed;
   z-index: -1;
+  top:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+}
+
+#mapidheader{
+  position:fixed;
+  z-index: -1;
+  top:0;
+  width:100%;
+  height:300px;
 }
 
 /*This line of code removes the focus on all buttons after a click, whether they are in the body or modal or anywhere*/
