--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ transform: scale(1.3);
 }
 
 /* social media button css */
-.social-fb, .social-tw, .social-gp, .social-em, .social-rm {
+.social-fb, .social-tw, .social-gp, .social-em, .social-rm, .social-sk {
 color: #606060;
 padding:10px;
 z-index: 2;
@@ -127,6 +127,9 @@ color: #f39c12;
 color: #d34836;
 }
 
+.social-sk:hover {
+color: #d36836;
+}
 
 
 /* Custom Horizontal Rule */
@@ -376,7 +379,9 @@ I want to have parallax but I'll pick up with it layer
   padding:30px 0px 30px 0px;
   margin: 10px 0 10px 0;
   background-color: white;
-  border: 0px;
+  border-width: 1px;
+  border-style: solid;
+  border-color:#505050;
   overflow: hidden;
   position: relative;
 }
