--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
     padding:0;
   }
 
+#bootstrapoverrides h1 {
+  color:#606060;
+  font-size: 3.5em;
+}
+
 #bootstrapoverrides {
   font-family: 'Lato', sans-serif;
   color:gray;
@@ -24,12 +29,6 @@ body {
 .text-vertical-center {
     text-align: center;
     vertical-align: middle;
-}
-
-.text-vertical-center h1 {
-    margin-top:60px;
-    font-size: 3.5em;
-    color:#505050;
 }
 
 .text-vertical-center h2 {
@@ -447,3 +446,8 @@ element style, and override the bootstrap padding css*/
 /*.container {
   background-color: rgba(255,255,255,.5);
 }*/
+
+#contactinfo {
+  margin-top: 200px;
+  /*background-color:rgba(255,255,255,.5);*/
+}
