--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,6 @@ body {
     padding:0;
   }
 
-#bootstrapoverrides h1 {
-  color:#606060;
-  font-size: 3.5em;
-}
 
 #bootstrapoverrides {
   font-family: 'Lato', sans-serif;
@@ -25,86 +21,40 @@ body {
       background-color:#E8E8E8;
     /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
 }
+#bootstrapoverrides h1 {
+  color:#606060;
+  font-size: 3.5em;
+}
+#bootstrapoverrides h2 {
+  color:#606060;
+  font-size: 3.5em;
+}
+
+
+
+
+#contactinfo {
+  margin-top: 200px;
+  /*background-color:rgba(255,255,255,.5);*/
+}
 
 .text-vertical-center {
     text-align: center;
     vertical-align: middle;
 }
 
-.text-vertical-center h2 {
-    margin:0px;
-    padding:0px;
-    font-size: 3.5em;
-    color:#505050;
-}
 
-
-
-.text-vertical-center h3 {
-    margin: 0px 320px 10px 0px;
-    color:black;
-}
-
-/* Custom Button Styles */
-
-
-.btn-dark {
-    border-radius: 0;
-    color: #fff;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.btn-dark:hover,
-.btn-dark:focus,
-.btn-dark:active {
-    color: #fff;
-    background-color: rgba(0,0,0,0.7);
-}
-
-.btn-light {
-    border-radius: 0;
-    color: #333;
-    background-color: rgb(255,255,255);
-}
-
-.btn-light:hover,
-.btn-light:focus,
-.btn-light:active {
-    color: #333;
-    background-color: rgba(255,255,255,0.8);
-}
-
-.btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 16px;
-    border: 2px solid #fff;
-    border-radius: 100%!important;
-    font-size: 40px;
-    color: white;
-    background: 0 0;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-
-.btn-circle:hover {
-    color:white;
-}
-
+/* Social Media Buttons */
 .grow {
 transition: all .1s ease-in-out; }
 .grow:hover {
 transform: scale(1.3);
 }
 
-/* social media button css */
 .social-fb, .social-tw, .social-gp, .social-em, .social-rm, .social-sk {
 color: #606060;
 padding:10px;
 z-index: 2;
-
 
 }
 .social-fb:hover {
@@ -112,39 +62,161 @@ color: #3B5998;
 }
 .social-tw:hover {
 color: #4099FF;
-
 }
 .social-gp:hover {
 color: #1D9833;
-
 }
 .social-em:hover {
 color: #f39c12;
-
 }
 .social-rm:hover {
 color: #d34836;
 }
-
 .social-sk:hover {
 color: #d36836;
 }
 
 
 /* Custom Horizontal Rule */
-
 hr.small {
     max-width: 100px;
-}
+    margin-bottom:10px;
+    border-top-color:red;
 
+}
 hr.medium {
     max-width: 300px;
     margin-bottom: 10px;
+    border-top-color:black;
 }
 
-.text-vertical-center > hr {
-  border-top-color:black;
+
+
+/* About */
+
+.about {
+    padding: 50px 0;
+    background-color: white;
 }
+
+/* Services */
+
+.services {
+    padding: 50px 0;
+    background-color: gray;
+}
+
+.service-item {
+    margin-bottom: 30px;
+}
+
+/* Callout */
+
+
+
+/* Portfolio */
+
+.portfolio {
+    padding: 50px 0;
+}
+
+.portfolio-item {
+    margin-bottom: 30px;
+}
+
+.img-portfolio {
+    margin: 0 auto;
+}
+
+.img-portfolio:hover {
+    opacity: 0.8;
+}
+
+
+.projectsgroup {
+  margin-top: 150px;
+  margin-bottom: 25px;
+}
+
+.projects {
+  padding:30px 0px 30px 0px;
+  margin: 10px 0 10px 0;
+  background-color: white;
+  border-width: 1px;
+  border-style: solid;
+  border-color:#505050;
+  overflow: hidden;
+  position: relative;
+}
+
+.projects h4 {
+  padding: 0px;
+  margin:0px;
+}
+
+/*this is the same as the .projects class, and SHOULD be in the .projects css, but for some reason the padding command does
+\ not override the bootstrap css padding command, the only way to override the command is to specifically call out the 
+element style, and override the bootstrap padding css*/
+#bootstrapoverrides > div.container.projectsgroup > div > button {
+  padding-left:0px;
+  padding-right:0px;
+}
+
+.buttonbackground {
+  padding: 30px 0 30px 0;
+  position: absolute;
+  right:0px;/*this centers the subinfo div inside the 'click to enter' div */
+  bottom: -80px;
+  width:100%;
+;  transition: all 0.2s ease;
+}
+
+.projects:hover .buttonbackground {
+  background-color: #ACACAC;
+  bottom: 0;
+}
+
+
+
+
+
+#mapid{
+  position:fixed;
+  z-index: -1;
+  top:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+}
+
+#mapidheader{
+  position:fixed;
+  z-index: -1;
+  top:0;
+  width:100%;
+  height:300px;
+}
+
+/*This line of code removes the focus on all buttons after a click, whether they are in the body or modal or anywhere*/
+*:focus {
+    outline: none;
+}
+
+
+.sectioninfo{
+  margin:200px 0 0 0;
+  padding:0px 0 600px 0;
+  background-color:white;
+}
+
+.sectiontitle {
+  padding: 30px 0 30px 0;
+}
+
+.sectioncontent {
+  padding:15px 0 15px 0;
+}
+
 
 /* Side Menu */
 
@@ -232,222 +304,30 @@ hr.medium {
 }
 
 
+/* Custom Button Styles */
 
-/* About */
-
-.about {
-    padding: 50px 0;
-    background-color: white;
-}
-
-/* Services */
-
-.services {
-    padding: 50px 0;
-    background-color: gray;
-}
-
-.service-item {
-    margin-bottom: 30px;
-}
-
-/* Callout */
-
-.callout {
-    display: table;
-    width: 100%;
-    height: 400px;
+.btn-dark {
+    border-radius: 0;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    background-color: rgba(0,0,0,0.4);
 }
 
-/* Portfolio */
-
-.portfolio {
-    padding: 50px 0;
+.btn-dark:hover,
+.btn-dark:focus,
+.btn-dark:active {
+    color: #fff;
+    background-color: rgba(0,0,0,0.7);
 }
 
-.portfolio-item {
-    margin-bottom: 30px;
+.btn-light {
+    border-radius: 0;
+    color: #333;
+    background-color: rgb(255,255,255);
 }
 
-.img-portfolio {
-    margin: 0 auto;
-}
-
-.img-portfolio:hover {
-    opacity: 0.8;
-}
-
-/* Call to Action */
-
-
-
-/* Map */
-
-.map {
-    height: 500px;
-}
-
-@media(max-width:768px) {
-    .map {
-        height: 75%;
-    }
-}
-
-/* Footer */
-
-footer {
-    padding: 100px 0;
-}
-
-
-/* Parallax CSS */
-/*Commenting off the code that enables the parallax layers to show up on my webpage.  
-I want to have parallax but I'll pick up with it layer
-
-body {
-  background: #415a6c;
-  margin: 0;
-  font-family: 'Oswald';
-}
-.parallax-container {
-  position: fixed;
-  overflow: visible;
-  width: 100%;
-  height: 850px;
-}
-.parallax-layer {
-  width: 100%;
-  height: 500px;
-  position: fixed;
-  left: 0;
-  top: 0;
-  background-position: bottom center;
-  background-repeat: repeat-x;
-  background-size: 960px 253px;
-}
-
- Commenting off the code that enables the parallax layers to show up on my webpage.  
-I want to have parallax but I'll pick up with it layer
-
-  .layer-0 {
-    top: 0;
-    z-index: 5;
-    background: #dbf0ff url('http://i.imgur.com/4hwp8up.png') no-repeat top 40px center;
-    background-size: 120px 138.5px;
-  }
-  .layer-1 {
-    top: -100px;
-    z-index: 5;
-    background-image: url('http://i.imgur.com/Ra2bzmb.png');
-  }
-  .layer-2 {
-    top: -50px;
-    z-index: 10;
-    background-image: url('http://i.imgur.com/jSOo9SK.png');
-  }
-  .layer-3 {
-    top: -10px;
-    z-index: 15;
-    background-image: url('http://i.imgur.com/DOZRBDj.png');
-  }
-  .layer-4 {
-    top: 65px;
-    z-index: 20;
-    background-image: url('http://i.imgur.com/JbSR9JY.png');
-  }
-  .layer-5 {
-    top: 150px;
-    z-index: 25;
-    background-image: url('http://i.imgur.com/Ti2mNxd.png');
-  }
-
-  -------END OF PARALLAX CSS */
-.projectsgroup {
-  margin-top: 50px;
-  margin-bottom: 25px;
-}
-
-
-.projects {
-  padding:30px 0px 30px 0px;
-  margin: 10px 0 10px 0;
-  background-color: white;
-  border-width: 1px;
-  border-style: solid;
-  border-color:#505050;
-  overflow: hidden;
-  position: relative;
-}
-
-.projects h4 {
-  padding: 0px;
-  margin:0px;
-}
-
-/*this is the same as the .projects class, and SHOULD be in the .projects css, but for some reason the padding command does
-\ not override the bootstrap css padding command, the only way to override the command is to specifically call out the 
-element style, and override the bootstrap padding css*/
-#bootstrapoverrides > div.container.projectsgroup > div > button {
-  padding-left:0px;
-  padding-right:0px;
-}
-
-.buttonbackground {
-  padding: 30px 0 30px 0;
-  position: absolute;
-  bottom: -80px;
-  width:100%;
-;  transition: all 0.2s ease;
-}
-
-.projects:hover .buttonbackground {
-  background-color: #ACACAC;
-  bottom: 0;
-}
-
-
-
-
-
-#mapid{
-  position:fixed;
-  z-index: -1;
-  top:0;
-  bottom:0;
-  width:100%;
-  height:100%;
-}
-
-#mapidheader{
-  position:fixed;
-  z-index: -1;
-  top:0;
-  width:100%;
-  height:300px;
-}
-
-/*This line of code removes the focus on all buttons after a click, whether they are in the body or modal or anywhere*/
-*:focus {
-    outline: none;
-}
-
-
-#aboutme{
-  margin-top:600px;
-  margin-bottom:100px;
-}
-
-/*.container {
-  background-color: rgba(255,255,255,.5);
-}*/
-
-#contactinfo {
-  margin-top: 200px;
-  /*background-color:rgba(255,255,255,.5);*/
+.btn-light:hover,
+.btn-light:focus,
+.btn-light:active {
+    color: #333;
+    background-color: rgba(255,255,255,0.8);
 }
