--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,14 @@
   /*background-color:rgba(255,255,255,.5);*/
 }
 
+#contactinfofooter {
+  margin-top:50px;
+}
+
+#contactinfofootersentense {
+  margin-top:200px;
+}
+
 .text-vertical-center {
     text-align: center;
     vertical-align: middle;
@@ -162,7 +170,7 @@ element style, and override the bootstrap padding css*/
 .buttonbackground {
   padding: 30px 0 30px 0;
   position: absolute;
-  right:0px;/*this centers the subinfo div inside the 'click to enter' div */
+  left:0px;/*this centers the subinfo div inside the 'click to enter' div */
   bottom: -80px;
   width:100%;
 ;  transition: all 0.2s ease;
