--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,23 @@
 }
 
 #contactinfofooter {
-  margin-top:50px;
+  margin-top:100px;
 }
 
 #contactinfofootersentense {
-  margin-top:200px;
+  margin-top:0px;
+}
+
+#enter {
+  margin-bottom:100px;
 }
 
 #mainnav {
   position:relative;
   height:100px;
-  background-color:white;
+  background-color:rgba(255,255,255,0.5);
+  float:none;
+
 }
 
 #mainnav > ul > li {
