--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 }
 #bootstrapoverrides h2 {
   color:#606060;
-  font-size: 3.5em;
+  font-size: 2.5em;
 }
 
 
@@ -71,15 +71,12 @@
 }
 
 #mainnav {
-  position:relative;
-  height:100px;
-  background-color:rgba(255,255,255,0.5);
   float:none;
 }
 
-#mainnav > ul > li {
-  padding-right:0px;
-  padding-left:0px;
+#mainnav ul li {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 #mainnavcontent {
