--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 }
 #bootstrapoverrides h2 {
   color:#606060;
-  font-size: 2.5em;
+  font-size: 3.5em;
 }
 
 
@@ -72,6 +72,8 @@
 
 #mainnav {
   float:none;
+  padding:0px;
+  font-size:.6vw;
 }
 
 #mainnav ul li {
