--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,9 @@
   margin-bottom:300px;
   background-color:rgba(255,255,255,.5);
   padding:30px 10px;
+  border-style: solid;
+  border-width:2px;
+  border-color:#606060;
 }
 
 #contactinfofooter {
@@ -158,7 +161,7 @@ background-color:white;
 
  #mainnavcontent > div {
   height:100%;
-  padding-top:0px;
+  padding-top:75px;
   background-color: white;
  }
 
@@ -180,14 +183,35 @@ background-color:white;
   height:300px;
 }
 
-.circle-image{
-    max-width:100%;
-    max-height:100%;
-
-    background-image:url("https://avatars0.githubusercontent.com/u/7850929?v=3&s=460");
-    display:block;
+#image1 {
+    height:300px;
+    background-image: url("../img/githubpic.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius:20px;
+    display: block;
 }
 
+#text1 {
+    height:300px;
+}
+
+#image2 {
+    height:300px;
+    background-image: url("../img/githubpic.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius:20px;
+    display: block;
+}
+
+#text2 {
+    height:300px;
+}
+
+.biggerfont {
+    font-size: 150%;
+}
 
 
 
