--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,10 @@
   color:#606060;
   font-size: 3.5em;
 }
-
+#bootstrapoverrides h3 {
+  color:#606060;
+  font-size: 2.5vw;
+}
 
 
 
@@ -147,6 +150,7 @@ hr.medium {
 #affixeditem > li {
   width:25%;
   display:block;
+  font-size:.75vm;
 }
 
 .wrapper {
