minor tweaks to text

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,10 @@ background-color:white;
 .biggerfont {
     font-size: 150%;
 }
-
+.aboutmefooter {
+    padding-top:200px;
+    padding-bottom:200px;
+}
 
 
 
