--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,10 @@
   padding-left:0px;
 }
 
-
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
 
 .text-vertical-center {
     text-align: center;
@@ -66,7 +69,7 @@
 }
 #bootstrapoverrides h3 {
   color:#606060;
-  font-size: 2.5vw;
+  font-size: 1.8vw;
 }
 
 
