--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ background-color:white;
     }
 }
 
-@media(min-width:480px) {
+@media(max-width:480px) {
     #contactinfo {
         margin-top:50px;
 }
