--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,13 @@
     vertical-align: middle;
 }
 
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
+
 #bootstrapoverrides h1 {
   color:#606060;
   font-size: 3.5em;
@@ -71,14 +78,21 @@
 
 
 
-#contactinfo {
-  margin-top:200px;
-  margin-bottom:50px;
+.infobox {
   background-color:rgba(255,255,255,.5);
-  padding:30px 10px;
   border-style: solid;
   border-width:2px;
   border-color:#606060;
+}
+
+#contactinfo {
+    margin-top:200px;
+    margin-bottom:50px;
+    padding: 30px 10px; */
+}
+
+#mainnavcontent {
+    margin-bottom:400px;
 }
 
 #contactinfofooter {
@@ -157,19 +171,11 @@ hr.medium {
 
 #blankwhitespace {
 width:100%;
-height:75px;
 background-color:white;
 }
 
- #mainnavcontent > div {
-  height:100%;
-  padding-top:75px;
-  background-color: white;
- }
 
- #mainnavcontent {
-    margin-top:100px;
- }
+
 
 
 #mapid{
@@ -190,12 +196,12 @@ background-color:white;
 }
 
 #image1 {
-    height:300px;
+    height:320px;
     background-image: url("../img/githubpic.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-    border-radius:20px;
-    display: block;
+
+
 }
 
 
