landing page complete, moving on to work on subpages

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@
   margin-bottom:300px;
 }
 
-/*the unique styling to get the "Click to Learn More" Circle around the double-down arrow*/
+/*the unique styling to get the "Click to Learn More" Circle around the double-down arrow
 #enter > a {
   margin-bottom:100px;
   color:#606060;
@@ -112,7 +112,7 @@
     font-size: 40px;
     color: #606060;
     background: 0 0;
-}
+}*/
 
 
 
