--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@
     height:800px;
     padding-bottom:50px;
     margin-bottom:50px;
+    background-color:rgba(255,255,255,.8);
 }
 
 #aboutme {
