--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ transition: all .1s ease-in-out; }
 .grow:hover {
 transform: scale(1.3);
 }
-.social-fb, .social-tw, .social-gp, .social-em, .social-rm, .social-sk {
+.social-fb, .social-tw, .social-gp, .social-em, .social-rm, .social-sk, .social-st {
 color: #606060;
 padding:10px;
 z-index: 2;}
@@ -150,6 +150,8 @@ color: #f39c12;}
 color: #d34836;}
 .social-sk:hover {
 color: #d36836;}
+.social-st:hover {
+color: #ec6120;}
 
 
 /* Custom Horizontal Rule */
