--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,15 @@
   padding-left:0px;
 }
 
+
+
+#singlepage {
+    padding: 50px 0px;
+    border-top:solid 2px;
+    background-color:white;
+    
+}
+
 .no-gutter > [class*='col-'] {
     padding-right:0;
     padding-left:0;
