--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@
 }
 
 .infobox {
-  background-color:rgba(255,255,255,.5);
+  background-color:rgba(255,255,255,.7);
   border-style: solid;
   border-width:2px;
   border-color:#606060;
@@ -243,7 +243,7 @@ background-color:white;
 
 
 
-#mapid{
+#map{
   position:fixed;
   z-index: -1;
   top:0;
