--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@
 
 #myTabContent {
   background-color:white;
-  width:100vw;
-  height: 100vh;
+  width:100%;
+  height: 100%;
   padding-left: 0px;
   padding-right: 0px;
 }
